# StandardizeLogic

./: .gitignore  CMakeLists.txt  README.md
include/: standard_logic_node.h  standard_logic_tree.h
src/: CMakeLists.txt  standard_logic_node.cpp  standard_logic_tree.cpp
standalone/: CMakeLists.txt  standard_logic_adapter.cpp
test/: CMakeLists.txt  test_standard_logic_tree.cpp
